--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "express": "^4.21.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "shortid": "^2.2.16",
+    "uuid": "^10.0.0"
   }
 }
